--- a/buildspec.yml
+++ b/buildspec.yml
@@ -2,35 +2,37 @@ version: 0.2
 
 env:
   variables:
-    AWS_DEFAULT_REGION: us-east-1
-    ECR_REPO_NAME: rag-my
+    IMAGE_REPO_NAME: rag-my          # 你的 ECR 仓库名
     IMAGE_TAG: latest
+    CONTAINER_NAME: rag-app          # ECS 任务定义里的 container name
 
 phases:
   pre_build:
     commands:
-      - echo Logging in to Amazon ECR...
+      - echo "Login to Amazon ECR..."
       - aws --version
-      
-      - ACCOUNT_ID=$(aws sts get-caller-identity --query 'Account' --output text)
-      - ECR_URI=${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${ECR_REPO_NAME}
-      
-      - aws ecr get-login-password --region ${AWS_DEFAULT_REGION} \
-        | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com
+      # 获取账号 ID
+      - ACCOUNT_ID=$(aws sts get-caller-identity --query Account --output text)
+      - echo "ACCOUNT_ID = $ACCOUNT_ID"
+      # 组装 ECR 仓库 URI
+      - REPOSITORY_URI=${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}
+      - echo "REPOSITORY_URI = $REPOSITORY_URI"
+      # 登录 ECR（注意：这里不要加反斜杠，不要加 $()）
+      - aws ecr get-login-password --region $AWS_DEFAULT_REGION | docker login --username AWS --password-stdin ${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com
 
   build:
     commands:
-      - echo Building Docker image...
-      - docker build -t ${ECR_URI}:${IMAGE_TAG} .
-      - echo Pushing Docker image...
-      - docker push ${ECR_URI}:${IMAGE_TAG}
+      - echo "Build Docker image..."
+      - docker build -t ${IMAGE_REPO_NAME}:${IMAGE_TAG} .
+      - docker tag ${IMAGE_REPO_NAME}:${IMAGE_TAG} ${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
 
   post_build:
     commands:
-      - echo Writing image definitions file...
-      
-      - printf '[{"name":"rag-app","imageUri":"%s"}]' "${ECR_URI}:${IMAGE_TAG}" > imagedefinitions.json
-      - echo Done writing imagedefinitions.json
+      - echo "Push image to ECR..."
+      - docker push ${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}
+      - echo "Generate imagedefinitions.json for ECS deploy..."
+      - printf '[{"name":"%s","imageUri":"%s"}]' "$CONTAINER_NAME" "${ACCOUNT_ID}.dkr.ecr.${AWS_DEFAULT_REGION}.amazonaws.com/${IMAGE_REPO_NAME}:${IMAGE_TAG}" > imagedefinitions.json
+      - cat imagedefinitions.json
 
 artifacts:
   files:
