--- a/.gitignore
+++ b/.gitignore
@@ -1,14 +1,6 @@
-# allow specific files:
-
-# allow mp4 files
-!*.mp4
-
-
-# allow specific directories:
-
-# allow the assets directory
-!assets/
-
+# =====================================================================
+# GENERAL IGNORE RULES
+# =====================================================================
 
 # Byte-compiled / optimized / DLL files
 __pycache__/
@@ -18,124 +10,105 @@ __pycache__/
 # C extensions
 *.so
 
-# Distribution / packaging
-.Python
+# OS files
+.DS_Store
+Thumbs.db
+desktop.ini
+
+# =====================================================================
+# PYTHON ENVIRONMENTS
+# =====================================================================
+.env
+.venv/
+venv/
+env/
+ENV/
+env.bak/
+venv.bak/
+.conda/
+*.conda
+
+# Do NOT commit real notebooks
+.ipynb_checkpoints/
+
+# =====================================================================
+# APPLICATION CONFIG / SECRETS
+# =====================================================================
+# Important: The real .env should NEVER be committed
+.env
+.env.*
+
+# =====================================================================
+# PACKAGE / BUILD FILES
+# =====================================================================
 build/
-develop-eggs/
 dist/
-downloads/
-eggs/
-.eggs/
-lib/
-lib64/
-parts/
-sdist/
-var/
 wheels/
+downloads/
+pip-wheel-metadata/
 *.egg-info/
-.installed.cfg
+.eggs/
 *.egg
 MANIFEST
+develop-eggs/
+sdist/
 
 # PyInstaller
-#  Usually these files are written by a python script from a template
-#  before PyInstaller builds the exe, so as to inject date/other infos into it.
-*.manifest
 *.spec
 
 # Installer logs
 pip-log.txt
 pip-delete-this-directory.txt
 
-# Unit test / coverage reports
+# =====================================================================
+# COVERAGE / TESTS
+# =====================================================================
 htmlcov/
 .tox/
 .nox/
 .coverage
 .coverage.*
 .cache
+pytest_cache/
 nosetests.xml
 coverage.xml
 *.cover
 .hypothesis/
-.pytest_cache/
-.cache
 
-# Translations
-*.mo
-*.pot
+# =====================================================================
+# PROJECT / EDITOR SETTINGS
+# =====================================================================
+# VSCode
+.vscode/
 
-# Django stuff:
-*.log
-local_settings.py
-db.sqlite3
-db.sqlite3-journal
-
-# Flask stuff:
-instance/
-.webassets-cache
-
-# Scrapy stuff:
-.scrapy
-
-# Sphinx documentation
-docs/_build/
-
-# PyBuilder
-target/
-
-# Jupyter Notebook
-.ipynb_checkpoints
-
-# IPython
-profile_default/
-ipython_config.py
-
-# pyenv
-.python-version
-
-# mypy
-.mypy_cache/
-.dmypy.json
-dmypy.json
-
-# PyCharm files
+# PyCharm
 .idea/
 *.iml
 *.iws
 *.ipr
-*.idea/
 
-# VSCode files
-.vscode/
-
-# MacOS-specific files
-.DS_Store
-
-# Windows-specific files
-Thumbs.db
-desktop.ini
-
-# Anaconda
-.conda/
-*.conda
-*.ipynb
-
-# Environments
-.env
-.venv
-env/
-venv/
-ENV/
-env.bak/
-venv.bak/
-
+# =====================================================================
+# DOCS / OUTPUT
+# =====================================================================
 docs/
 output/
-# *.pdf 
-# helper_functions.py
 
-# # Local vectorstores (RAG indexes)
-# chunks_vector_store/
-# chapter_summaries_vector_store/
-# book_quotes_vectorstore/
+# =====================================================================
+# NOTEBOOKS (OPTIONAL)
+# =====================================================================
+# ignore large notebooks unless necessary
+*.ipynb
+
+# =====================================================================
+# DO NOT IGNORE FAISS VECTOR STORES
+# (needed for ECS to load RAG indexes)
+# =====================================================================
+
+!chunks_vector_store/
+!chapter_summaries_vector_store/
+!book_quotes_vectorstore/
+
+# =====================================================================
+# ALLOW STATIC ASSETS
+# =====================================================================
+!assets/
